# ot2023

./: .coveragerc  .env  .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini  tasks.py
documentaatio/: vaatimusmaarittely.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  monopoli2.md  sekvenssikaavio.md  sekvenssikaavio2.md
src/: block.py  block_shapes.py  colors.py  config.py  game_grid.py  game_loop.py  gameloop.py  renderer.py  start_game.py  variables.py
src/data/: database.sqlite
src/database/: database_connection.py  initialize_database.py
src/repositories/: highscore_repository.py
src/services/: highscore_service.py
src/tests/: block_test.py  game_grid_test.py  game_loop_test.py  highscore_service_test.py
